[package]
name = "punda"
version = "0.1.0"
authors = ["cgm616 <cgm616@me.com>"]
edition = "2018"

[dependencies]
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.5"
cortex-m-rtfm = "0.5.1"
microbit = "0.8.0"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
