[package]
name = "punda"
version = "0.1.0"
authors = ["cgm616 <c@cgm616.me>"]
license = "MIT"
description = "An easy-to-use runtime for the BBC micro:bit, WIP."

[dependencies]
panic-semihosting = "0.5.3"
nrf51 = "0.6.0"
cortex-m-rt = "0.5.1"
alloc-cortex-m = "0.3.5"
nb = "0.1.2"

[dependencies.cortex-m]
features = ["inline-asm"]
version = "0.6.1"

[dependencies.nrf51-hal]
features = ["rt"]
version = "0.5.5"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"

